test/compile_error/redefined.conf.3.def
config redefined_conf {
	enum foo_t { FOO }
	enum foo_t { BAR }
}
